welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:2: error: not found: value int
  int l = nums.lenght
  ^arrayCount9:3: error: not found: value l
  for (i <- 0 to l){
                 ^arrayCount9:5: error: type mismatch;
 found   : Array[Int]
 required: Int
      return nums
             ^